--- a/Maven/HelloWorld/pom.xml
+++ b/Maven/HelloWorld/pom.xml
@@ -15,4 +15,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+  <plugins>
+      <!-- Maven JAR Plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.hello.App</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+   </plugins>
+  </build>
 </project>
