--- a/Ant/Webinar/build.xml
+++ b/Ant/Webinar/build.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0"?>
 <project name="HelloWorld" default="run">
+    <property name="src" location="src"/>
+    <property name="build" location="build"/>
+    <property name="classes" location="${build}/classes"/>
     <target name="mkdir">
-        <mkdir dir="build/classes"/>
+        <mkdir dir="${classes}"/>
     </target>
     <target name="compile" depends="mkdir">
-        <javac destdir="build/classes" includeantruntime="false">
-            <src path="src"/>
+        <javac destdir="${classes}" includeantruntime="false">
+            <src path="${src}"/>
         </javac>
     </target>
     <target name="run" depends="compile">
-        <java classname="HelloWorld" classpath="build/classes"/>
+        <java classname="${ant.project.name}" classpath="${classes}"/>
     </target>
     <target name="clean">
-        <delete dir="build"/>
+        <delete dir="${build}"/>
     </target>
 </project>
