--- a/Ant/Webinar/build.xml
+++ b/Ant/Webinar/build.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0"?>
 <project name="HelloWorld" default="run">
+
+    <!-- set propertes -->
     <property name="src" location="src"/>
     <property name="build" location="build"/>
     <property name="classes" location="${build}/classes"/>
+
+    <!-- make folders for class/jar file(s) -->
     <target name="mkdir">
         <mkdir dir="${classes}"/>
     </target>
+
+    <!-- compile java file(s) to class file(s) -->
     <target name="compile" depends="mkdir">
         <javac destdir="${classes}" includeantruntime="false">
             <src path="${src}"/>
         </javac>
     </target>
+
+    <!-- run class file(s) -->
     <target name="run" depends="compile">
         <java classname="${ant.project.name}" classpath="${classes}"/>
     </target>
+
+    <!-- make jar file -->
     <target name="package" depends="compile">
         <jar destfile="${build}/${ant.project.name}.jar" basedir="${classes}">
             <manifest>
@@ -21,6 +31,8 @@
             </manifest>
         </jar>
     </target>
+
+    <!-- delete folders with class/jar file(s) -->
     <target name="clean">
         <delete dir="${build}"/>
     </target>
