--- a/AntMavenGradle/gradle/build.gradle
+++ b/AntMavenGradle/gradle/build.gradle
@@ -14,6 +14,8 @@ apply plugin: 'java'
 apply plugin: 'application'
 mainClassName = "HelloWorld"
 
+version '0.1'
+
 jar {
     manifest {
         attributes 'Main-Class': 'HelloWorld'
