--- a/AntMavenGradle/ant/build.xml
+++ b/AntMavenGradle/ant/build.xml
@@ -7,9 +7,12 @@
     <property name="classes" location="${build}/classes"/>
 
     <!-- define place with files for junit -->
-    <path id="junit.path">
-        <!-- put there two jar files junit & hamcrest-core -->
-        <fileset dir="${ant.library.dir}\junit">
+    <path id="extlib.path">
+        <!-- 
+            to create directory 'ext' in ant library directory
+            and put there two jar files: junit-4.12 & hamcrest-core-1.3
+        -->
+        <fileset dir="${ant.library.dir}/ext">
             <include name="**/*.jar"/>
         </fileset>
     </path>
@@ -18,7 +21,7 @@
     <target name="compile">
         <mkdir dir="${classes}"/>
         <javac srcdir="${src}" destdir="${classes}" includeAntRuntime="false">
-            <classpath refid="junit.path" />
+            <classpath refid="extlib.path"/>
         </javac>
     </target>
 
@@ -30,7 +33,7 @@
     <!-- junit test -->
     <target name="test" depends="compile">
         <junit printsummary="on">
-            <classpath refid="junit.path" />
+            <classpath refid="extlib.path"/>
             <classpath>
                 <pathelement location="${classes}"/>
             </classpath>
