--- a/Java 3/hw2/pom.xml
+++ b/Java 3/hw2/pom.xml
@@ -9,7 +9,9 @@
   <version>0.1</version>
 
   <properties>
-    <java-version>1.8</java-version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <main-class>HW2App</main-class>
   </properties>
 
