--- a/Test Tasks/merck.com/jdbc/pom.xml
+++ b/Test Tasks/merck.com/jdbc/pom.xml
@@ -6,7 +6,8 @@
   <version>0.1</version>
 
   <properties>
-    <java-version>1.8</java-version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <main-class>BookShelf</main-class>
   </properties>
 
