--- a/Test Tasks/merck.com/hibernate/pom.xml
+++ b/Test Tasks/merck.com/hibernate/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.2.12.Final</version>
+      <version>5.2.17.Final</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -56,7 +56,7 @@
       <!--
       https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin
       to run with parameter:
-      $ mvn exec:java -Dexec.args="--init <file_name>"
+      $ mvn exec:java -Dexec.args="­­init <file_name>"
       -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
