--- a/Java 3/J3Lesson2/pom.xml
+++ b/Java 3/J3Lesson2/pom.xml
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>sqlite</groupId>
-    <artifactId>sqlite-example</artifactId>
+    <artifactId>sqlite-demo</artifactId>
     <version>0.1</version>
 
     <properties>
@@ -19,7 +16,7 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.21.0</version>
+            <version>3.23.1</version>
         </dependency>
     </dependencies>
 
@@ -38,7 +35,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>CRUD</mainClass>
+                    <mainClass>SQLiteDemo</mainClass>
                 </configuration>
             </plugin>
         </plugins>
