--- a/BerlinAIT/OnlineShop/pom.xml
+++ b/BerlinAIT/OnlineShop/pom.xml
@@ -58,6 +58,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
