--- a/BerlinAIT/OnlineShop/pom.xml
+++ b/BerlinAIT/OnlineShop/pom.xml
@@ -93,6 +93,7 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<executable>true</executable>
 				</configuration>
 			</plugin>
 		</plugins>
