--- a/BerlinAIT/HelloWeb/pom.xml
+++ b/BerlinAIT/HelloWeb/pom.xml
@@ -6,18 +6,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.13</version>
+        <version>2.7.15</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>org.ait-tr</groupId>
-    <artifactId>hello-mvc</artifactId>
+    <groupId>web.hello</groupId>
+    <artifactId>hello-web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hello-mvc</name>
-    <description>MVC project for Spring Boot</description>
+    <name>hello-web</name>
+    <description>Web small project for Spring Boot</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
