--- a/BerlinAIT/HelloLiquibase/pom.xml
+++ b/BerlinAIT/HelloLiquibase/pom.xml
@@ -63,11 +63,22 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- make jar executable -->
 				<configuration>
 					<executable>true</executable>
 				</configuration>
 			</plugin>
 		</plugins>
+		<!-- to exclude application.yaml from result jar -->
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<excludes>
+					<exclude>**/application.yaml</exclude>
+				</excludes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
