--- a/BerlinAIT/HelloTest/config/application-test.yaml
+++ b/BerlinAIT/HelloTest/config/application-test.yaml
@@ -1,3 +1,10 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+logging:
+  file:
+    name:
+
