tomate pizza 10th day

--- a/BerlinAIT/TomatePizza/src/main/resources/application.yaml
+++ b/BerlinAIT/TomatePizza/src/main/resources/application.yaml
@@ -6,6 +6,11 @@ spring:
     password: root
   jpa:
     show-sql: true
+
+springdoc:
+  sch
+
+
 #logging:
 #  file:
 #    name: hello-liquibase.log
