--- a/BerlinAIT/HelloJWT/pom.xml
+++ b/BerlinAIT/HelloJWT/pom.xml
@@ -6,16 +6,15 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.14</version>
+        <version>2.7.17</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>hello-security-jwt</groupId>
     <artifactId>hello-security-jwt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hello-security-jwt</name>
-    <description>Spring Security REST JWT project for Spring Boot</description>
-    <packaging>jar</packaging>
+    <name>HelloJWT</name>
+    <description>HelloJWT Spring Security HelloWorld</description>
 
     <properties>
         <java.version>11</java.version>
@@ -39,13 +38,6 @@
             <version>0.9.1</version>
         </dependency>
 
-        <!-- note: https://topjava.ru/blog/migrating-to-java11-part3 -->
-        <!--<dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
-        </dependency>-->
-
         <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -53,12 +45,10 @@
             <version>1.7.0</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.28</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -67,6 +57,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
