--- a/BerlinAIT/HelloREST/pom.xml
+++ b/BerlinAIT/HelloREST/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.15</version>
+		<version>2.7.17</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>rest.hello</groupId>
+	<groupId>hello.rest</groupId>
 	<artifactId>hello-rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>HelloREST</name>
@@ -24,15 +24,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
-		<!-- http://localhost:8080/swagger-ui.html -->
-		<!-- http://localhost:8080/v3/api-docs -->
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.7.0</version>
 		</dependency>
 	</dependencies>
 
