hello Liquibase update

--- a/BerlinAIT/HelloLiquibase/src/main/resources/application.yaml
+++ b/BerlinAIT/HelloLiquibase/src/main/resources/application.yaml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/cohort29
     username: postgres
     password: root
+
+logging:
+  file:
+    name: hello-liquibase.log
