News Crawler day #4

--- a/BerlinAIT/NewsCrawler/pom.xml
+++ b/BerlinAIT/NewsCrawler/pom.xml
@@ -34,10 +34,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
