--- a/BerlinAIT/NewsCrawler/pom.xml
+++ b/BerlinAIT/NewsCrawler/pom.xml
@@ -66,6 +66,9 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.7.0</version>
+            <!-- Swagger UI for Spring Boot 3
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.2</version>-->
         </dependency>
 
         <dependency>
