News Crawler day #8

--- a/BerlinAIT/NewsCrawler/src/main/resources/application.yaml
+++ b/BerlinAIT/NewsCrawler/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
+server:
+  port: 8080
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/news_crawler
     username: postgres
     password: root
+
+executor:
+  waitMin: 30
 
