--- a/BerlinAIT/HelloLiquibase/pom.xml
+++ b/BerlinAIT/HelloLiquibase/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.17</version>
+		<version>2.7.18</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -14,7 +14,7 @@
 	<artifactId>hello-liquibase</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>HelloLiquibase</name>
-	<description>HelloLiquibase</description>
+	<description>HelloLiquibase Spring Boot Application</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -42,6 +42,13 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.7.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.14.0</version>
 		</dependency>
 
 		<dependency>
