hello jwt spring boot 3

--- a/BerlinAIT/HelloJWT/pom.xml
+++ b/BerlinAIT/HelloJWT/pom.xml
@@ -6,18 +6,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.17</version>
+        <version>3.2.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>hello-security-jwt</groupId>
-    <artifactId>hello-security-jwt</artifactId>
+    <groupId>hello.security3.jwt</groupId>
+    <artifactId>hello-security3-jwt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>HelloJWT</name>
     <description>HelloJWT Spring Security HelloWorld</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -35,14 +35,14 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <version>0.12.3</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui -->
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.7.0</version>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
         </dependency>
 
         <dependency>
