--- a/BerlinAIT/NewsCrawler/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/BerlinAIT/NewsCrawler/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/db.changelog.xml
+  - include:
+      file: db/changelog/db.changelog.3.xml
