java pizza project #2 file repository & test

--- a/BerlinAIT/Cohort42.1project/JavaPizzaMvn/pom.xml
+++ b/BerlinAIT/Cohort42.1project/JavaPizzaMvn/pom.xml
@@ -26,6 +26,14 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.36</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
